cmake_minimum_required (VERSION 2.8.11)

add_subdirectory(comm_component)
add_subdirectory(core_component)
add_subdirectory(vision_component)
add_subdirectory(dispatcher_component)
add_subdirectory(strg_component)
add_subdirectory(common)
add_subdirectory(calib_tools)
add_subdirectory(model_app)

#copy log4crc setting file to newly created dir
exec_program("mkdir -p bin")
exec_program("cp ${CMAKE_SOURCE_DIR}/App/utils/log4crc bin")
exec_program("cp ${CMAKE_SOURCE_DIR}/App/utils/config.ini bin")
exec_program("cp ${CMAKE_SOURCE_DIR}/App/utils/haar*.xml bin")
exec_program("cp ${CMAKE_SOURCE_DIR}/Scripts/insert.sh bin")
exec_program("cp ${CMAKE_SOURCE_DIR}/Scripts/run_2cams.sh bin")
exec_program("cp -rf ${CMAKE_SOURCE_DIR}/App/calib_tools/NetAnalyzer/ bin")
exec_program("cp -rf ${CMAKE_SOURCE_DIR}/App/calib_tools/CoordMerger/ bin")
exec_program("cp -rf ${CMAKE_SOURCE_DIR}/App/calib_tools/InputReductor/ bin")
